--- a/table_of_contents.ipynb
+++ b/table_of_contents.ipynb
@@ -4,145 +4,142 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><h1>Kalman and Bayesian Filters in Python</h1></center>\n",
+    "<center><h1>Python实现卡尔曼和贝叶斯滤波器</h1></center>\n",
     "<p>\n",
     " <p>\n",
     "\n",
-    "## Table of Contents\n",
+    "## 目录\n",
     "\n",
-    "[**Preface**](./00-Preface.ipynb)\n",
+    "[**前言**](./00-Preface.ipynb)\n",
     " \n",
-    "Motivation behind writing the book. How to download and read the book. Requirements for IPython Notebook and Python. github links.\n",
+    "写书的动机。如何下载和阅读这本书。对IPython笔记本和Python的要求。github链接。\n",
     "\n",
     "\n",
-    "[**Chapter 1: The g-h Filter**](./01-g-h-filter.ipynb)\n",
+    "[**第一章 :   g-h Filter**](./01-g-h-filter.ipynb)\n",
+    "     \n",
+    "直观介绍g-h滤波器，也称为$\\alpha$-$\\beta$ 滤波器，这是一个滤波器家族，包括卡尔曼滤波器。一旦你理解了这一章，你就会理解卡尔曼滤波器背后的概念。\n",
     "\n",
-    "Intuitive introduction to the g-h filter, also known as the $\\alpha$-$\\beta$ Filter, which is a family of filters that includes the Kalman filter. Once you understand this chapter you will understand the concepts behind the Kalman filter. \n",
+    "[**第二章: 离散贝叶斯滤波器**](./02-Discrete-Bayes.ipynb)\n",
     "\n",
+    "介绍离散贝叶斯滤波器。从这里，您将学习以一种容易理解的形式支持卡尔曼滤波器的概率(贝叶斯)推理。\n",
     "\n",
-    "[**Chapter 2: The Discrete Bayes Filter**](./02-Discrete-Bayes.ipynb)\n",
+    "[**第三章: 概率，高斯和贝叶斯定理**](./03-Gaussians.ipynb)\n",
     "\n",
-    "Introduces the discrete Bayes filter. From this you will learn the probabilistic (Bayesian) reasoning that underpins the Kalman filter in an easy to digest form.\n",
-    "\n",
-    "[**Chapter 3: Probabilities, Gaussians, and Bayes' Theorem**](./03-Gaussians.ipynb)\n",
-    "\n",
-    "Introduces using Gaussians to represent beliefs in the Bayesian sense. Gaussians allow us to implement the algorithms used in the discrete Bayes filter to work in continuous domains.\n",
-    "\n",
-    "\n",
-    "[**Chapter 4: One Dimensional Kalman Filters**](./04-One-Dimensional-Kalman-Filters.ipynb)\n",
-    "\n",
-    "Implements a Kalman filter by modifying the discrete Bayes filter to use Gaussians. This is a full featured Kalman filter, albeit only useful for 1D problems. \n",
+    "介绍在贝叶斯意义上使用高斯来表示信念。高斯函数允许我们实现在连续域中使用的离散贝叶斯滤波器的算法。\n",
     "\n",
     "\n",
-    "[**Chapter 5: Multivariate Gaussians**](./05-Multivariate-Gaussians.ipynb)\n",
+    "[**第四章: 一维卡尔曼滤波器**](./04-One-Dimensional-Kalman-Filters.ipynb)\n",
     "\n",
-    "Extends Gaussians to multiple dimensions, and demonstrates how 'triangulation' and hidden variables can vastly improve estimates.\n",
-    "\n",
-    "[**Chapter 6: Multivariate Kalman Filter**](./06-Multivariate-Kalman-Filters.ipynb)\n",
-    "\n",
-    "We extend the Kalman filter developed in the univariate chapter to the full, generalized filter for linear problems. After reading this you will understand how a Kalman filter works and how to design and implement one for a (linear) problem of your choice.\n",
-    "\n",
-    "[**Chapter 7: Kalman Filter Math**](./07-Kalman-Filter-Math.ipynb)\n",
-    "\n",
-    "We gotten about as far as we can without forming a strong mathematical foundation. This chapter is optional, especially the first time, but if you intend to write robust, numerically stable filters, or to read the literature, you will need to know the material in this chapter. Some sections will be required to understand the later chapters on nonlinear filtering. \n",
+    "通过将离散贝叶斯滤波器修改为高斯滤波器来实现卡尔曼滤波器。这是一个功能齐全的卡尔曼滤波器，尽管只对一维问题有用。 \n",
     "\n",
     "\n",
-    "[**Chapter 8: Designing Kalman Filters**](./08-Designing-Kalman-Filters.ipynb)\n",
+    "[**第五章: 多元高斯模型**](./05-Multivariate-Gaussians.ipynb)\n",
     "\n",
-    "Building on material in Chapters 5 and 6, walks you through the design of several Kalman filters. Only by seeing several different examples can you really grasp all of the theory. Examples are chosen to be realistic, not 'toy' problems to give you a start towards implementing your own filters. Discusses, but does not solve issues like numerical stability.\n",
+    "将高斯函数扩展到多个维度，并演示了“三角剖分”和隐藏变量如何极大地改进估计\n",
     "\n",
+    "[**第六章：多元卡尔曼滤波**](./06-Multivariate-Kalman-Filters.ipynb)\n",
     "\n",
-    "[**Chapter 9: Nonlinear Filtering**](./09-Nonlinear-Filtering.ipynb)\n",
+    "我们将在单变量一章中发展的卡尔曼滤波器推广到线性问题的全广义滤波器。读完这篇文章后，你将了解卡尔曼滤波器如何工作，以及如何设计和实现一个(线性)问题的选择。\n",
     "\n",
-    "Kalman filters as covered only work for linear problems. Yet the world is nonlinear. Here I introduce the problems that nonlinear systems pose to the filter, and briefly discuss the various algorithms that we will be learning in subsequent chapters.\n",
+    "[**第七章:卡尔曼滤波数学**](./07-Kalman-Filter-Math.ipynb)\n",
     "\n",
-    "\n",
-    "[**Chapter 10: Unscented Kalman Filters**](./10-Unscented-Kalman-Filter.ipynb)\n",
-    "\n",
-    "Unscented Kalman filters (UKF) are a recent development in Kalman filter theory. They allow you to filter nonlinear problems without requiring a closed form solution like the Extended Kalman filter requires.\n",
-    "\n",
-    "This topic is typically either not mentioned, or glossed over in existing texts, with Extended Kalman filters receiving the bulk of discussion. I put it first because the UKF is much simpler to understand, implement, and the filtering performance is usually as good as or better then the Extended Kalman filter. I always try to implement the UKF first for real world problems, and you should also.\n",
+    "在没有形成坚实的数学基础的情况下，我们已经做了很多了。这一章是可选的，特别是第一次，但如果你打算写稳健的，数值稳定的过滤器，或阅读文献，你将需要了解这一章的材料。为了理解后面关于非线性滤波的章节，将需要一些章节。 \n",
     "\n",
     "\n",
-    "[**Chapter 11: Extended Kalman Filters**](./11-Extended-Kalman-Filters.ipynb)\n",
+    "[**第八章:卡尔曼滤波器的设计**](./08-Designing-Kalman-Filters.ipynb)\n",
     "\n",
-    "Extended Kalman filters (EKF) are the most common approach to linearizing non-linear problems. A majority of real world Kalman filters are EKFs, so will need to understand this material to understand existing code, papers, talks, etc. \n",
-    "\n",
-    "\n",
-    "[**Chapter 12: Particle Filters**](./12-Particle-Filters.ipynb)\n",
-    "\n",
-    "Particle filters uses Monte Carlo techniques to filter data. They easily handle highly nonlinear and non-Gaussian systems, as well as multimodal distributions (tracking multiple objects simultaneously) at the cost of high computational requirements.\n",
+    "在第5章和第6章的基础上，介绍了几个卡尔曼滤波器的设计。只有通过看几个不同的例子，你才能真正掌握所有的理论。选择的例子是现实的，而不是“玩具”问题，让你开始实现自己的过滤器。讨论，但不解决数值稳定性等问题。\n",
     "\n",
     "\n",
-    "[**Chapter 13: Smoothing**](./13-Smoothing.ipynb)\n",
+    "[**第九章:非线性滤波**](./09-Nonlinear-Filtering.ipynb)\n",
     "\n",
-    "Kalman filters are recursive, and thus very suitable for real time filtering. However, they work extremely well for post-processing data. After all, Kalman filters are predictor-correctors, and it is easier to predict the past than the future! We discuss some common approaches.\n",
+    "卡尔曼滤波器仅适用于线性问题。然而，世界是非线性的。在这里，我介绍非线性系统对滤波器提出的问题，并简要讨论我们将在后续章节中学习的各种算法。\n",
     "\n",
     "\n",
-    "[**Chapter 14: Adaptive Filtering**](./14-Adaptive-Filtering.ipynb)\n",
+    "[**第十章:无迹卡尔曼滤波器**](./10-Unscented-Kalman-Filter.ipynb)\n",
+    "\n",
+    "无迹卡尔曼滤波器(UKF)是卡尔曼滤波理论的最新发展。它们允许你过滤非线性问题，而不需要像扩展卡尔曼滤波器那样需要封闭形式的解决方案。\n",
+    "\n",
+    "这个话题通常不是没有提到，就是在现有的文本中被掩盖了，扩展卡尔曼滤波器接受了大量的讨论。我把它放在第一位是因为UKF更容易理解和实现，而且滤波性能通常与扩展卡尔曼滤波器一样好，甚至更好。我总是尝试先实现UKF来解决实际问题，你也应该这样做\n",
+    "\n",
+    "[**第十一章:扩展卡尔曼滤波器**](./11-Extended-Kalman-Filters.ipynb)\n",
+    "\n",
+    "扩展卡尔曼滤波器(EKF)是线性化非线性问题最常用的方法。现实世界中的大多数卡尔曼滤波器都是ekf，因此需要理解这些材料来理解现有的代码、论文、演讲等\n",
+    "\n",
+    "\n",
+    "[**第十二章:粒子滤波器**](./12-Particle-Filters.ipynb)\n",
+    "\n",
+    "粒子滤波器使用蒙特卡罗技术来过滤数据。它们很容易处理高度非线性和非高斯系统，以及多模态分布(同时跟踪多个目标)，但代价是高计算要求\n",
+    "\n",
+    "\n",
+    "[**第十三章:平滑**](./13-Smoothing.ipynb)\n",
+    "\n",
+    "卡尔曼滤波器是递归的，因此非常适合于实时滤波。然而，它们在后期处理数据时工作得非常好。毕竟，卡尔曼滤波器是预测-校正器，预测过去比预测未来更容易!我们讨论一些常见的方法。\n",
+    "\n",
+    "\n",
+    "[**第十四章:自适应滤波**](./14-Adaptive-Filtering.ipynb)\n",
     "    \n",
-    "Kalman filters assume a single process model, but manuevering targets typically need to be described by several different process models. Adaptive filtering uses several techniques to allow the Kalman filter to adapt to the changing behavior of the target.\n",
+    "卡尔曼滤波器假定一个单一的过程模型，但是操纵目标通常需要由几个不同的过程模型来描述。自适应滤波使用几种技术，使卡尔曼滤波适应目标的变化行为。\n",
     "\n",
     "\n",
-    "[**Appendix A: Installation, Python, NumPy, and FilterPy**](./Appendix-A-Installation.ipynb)\n",
+    "[**附录A:安装、Python、NumPy和FilterPy**](./Appendix-A-Installation.ipynb)\n",
     "\n",
-    "Brief introduction of Python and how it is used in this book. Description of the companion\n",
-    "library FilterPy. \n",
+    "本书简要介绍了Python及其使用方法。配套库FilterPy的描述。\n",
     "    \n",
     "\n",
-    "[**Appendix B: Symbols and Notations**](./Appendix-B-Symbols-and-Notations.ipynb)\n",
+    "[**附录B:符号和符号**](./Appendix-B-Symbols-and-Notations.ipynb)\n",
     "\n",
-    "Most books opt to use different notations and variable names for identical concepts. This is a large barrier to understanding when you are starting out. I have collected the symbols and notations used in this book, and built tables showing what notation and names are used by the major books in the field.\n",
+    "大多数书选择使用不同的符号和变量名来表示相同的概念。当你刚开始学习时，这是一个很大的障碍。我收集了本书中使用的符号和符号，并建立了表格，显示该领域的主要书籍使用的符号和名称。\n",
     "\n",
-    "*Still just a collection of notes at this point.*\n",
+    "*在这一点上仍然只是一个笔记的收集.*\n",
     "\n",
     "\n",
-    "[**Appendix D: H-Infinity Filters**](./Appendix-D-HInfinity-Filters.ipynb)\n",
+    "[**附录D: h -无限滤波器**](./Appendix-D-HInfinity-Filters.ipynb)\n",
     "    \n",
-    "Describes the $H_\\infty$ filter. \n",
+    "介绍了 $H_\\infty$ 滤波器. \n",
     "\n",
-    "*I have code that implements the filter, but no supporting text yet.*\n",
-    "\n",
-    "\n",
-    "[**Appendix E: Ensemble Kalman Filters**](./Appendix-E-Ensemble-Kalman-Filters.ipynb)\n",
-    "\n",
-    "Discusses the ensemble Kalman Filter, which uses a Monte Carlo approach to deal with very large Kalman filter states in nonlinear systems.\n",
+    "*我有实现过滤器的代码，但还没有支持文本*\n",
     "\n",
     "\n",
-    "[**Appendix F: FilterPy Source Code**](./Appendix-F-Filterpy-Code.ipynb)\n",
+    "[**附录E:集合卡尔曼滤波器**](./Appendix-E-Ensemble-Kalman-Filters.ipynb)\n",
     "\n",
-    "Listings of important classes from FilterPy that are used in this book.\n",
-    "\n",
-    "\n",
-    "## Supporting Notebooks\n",
-    "\n",
-    "These notebooks are not a primary part of the book, but contain information that might be interested to a subest of readers.\n",
+    "讨论了集合卡尔曼滤波器，它使用蒙特卡罗方法来处理非线性系统中非常大的卡尔曼滤波器状态。\n",
     "\n",
     "\n",
-    "[**Computing and plotting PDFs**](./Supporting_Notebooks/Computing_and_plotting_PDFs.ipynb)\n",
+    "[**附录F: FilterPy源代码**](./Appendix-F-Filterpy-Code.ipynb)\n",
     "\n",
-    "Describes how I implemented the plotting of various pdfs in the book.\n",
-    "\n",
-    "\n",
-    "[**Interactions**](./Supporting_Notebooks/Interactions.ipynb)\n",
-    "\n",
-    "Interactive simulations of various algorithms. Use sliders to change the output in real time.\n",
-    "\n",
-    "[**Converting the Multivariate Equations to the Univariate Case**](./Supporting_Notebooks/Converting-Multivariate-Equations-to-Univariate.ipynb)\n",
-    "\n",
-    "Demonstrates that the Multivariate equations are identical to the univariate Kalman filter equations by setting the dimension of all vectors and matrices to one.\n",
-    "\n",
-    "[**Iterative Least Squares for Sensor Fusion**](./Supporting_Notebooks/Iterative-Least-Squares-for-Sensor-Fusion.ipynb)\n",
-    "\n",
-    "Deep dive into using an iterative least squares technique to solve the nonlinear problem of finding position from multiple GPS pseudorange measurements.\n",
+    "本书中使用的FilterPy中重要类的清单。\n",
     "\n",
     "\n",
-    "[**Taylor Series**](./Supporting_Notebooks/Taylor-Series.ipynb)\n",
+    "## 支持笔记\n",
     "\n",
-    "A very brief introduction to Taylor series.\n",
+    "这些笔记不是书的主要部分，但包含了可能会对一部分读者感兴趣的信息。\n",
     "\n",
     "\n",
-    "### Github repository\n",
+    "[**计算和绘制pdfs**](./Supporting_Notebooks/Computing_and_plotting_PDFs.ipynb)\n",
+    "\n",
+    "描述我如何在书中实现各种pdf的绘图。\n",
+    "\n",
+    "\n",
+    "[**交互**](./Supporting_Notebooks/Interactions.ipynb)\n",
+    "\n",
+    "各种算法的交互式仿真。使用滑块实时更改输出。\n",
+    "\n",
+    "[**将多元方程转换为单变量情况**](./Supporting_Notebooks/Converting-Multivariate-Equations-to-Univariate.ipynb)\n",
+    "\n",
+    "通过将所有向量和矩阵的维数设为1，证明多元方程与一元卡尔曼滤波方程是相同的。\n",
+    "\n",
+    "[**传感器融合的迭代最小二乘**](./Supporting_Notebooks/Iterative-Least-Squares-for-Sensor-Fusion.ipynb)\n",
+    "\n",
+    "深入研究利用迭代最小二乘技术解决从多个GPS伪距测量中寻找位置的非线性问题。\n",
+    "\n",
+    "\n",
+    "[**泰勒系列，泰勒级数**](./Supporting_Notebooks/Taylor-Series.ipynb)\n",
+    "\n",
+    "简单介绍一下泰勒级数。\n",
+    "\n",
+    "\n",
+    "### Github 仓库\n",
     "http://github.com/rlabbe/Kalman-and-Bayesian-Filters-in-Python\n"
    ]
   },
@@ -401,7 +398,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -415,7 +412,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
